trunk/Archive2/ff/27e31d1933cda8/output
main.cpp:27:9: error: 'reference' does not name a type
   const reference operator* ( ) const {
         ^
main.cpp:27:9: note: (perhaps 'typename std::iterator<std::forward_iterator_tag, T, TDiff, TPointer, TReference>::reference' was intended)
main.cpp:32:3: error: 'reference' does not name a type
   reference operator* ( ) {
   ^
main.cpp:32:3: note: (perhaps 'typename std::iterator<std::forward_iterator_tag, T, TDiff, TPointer, TReference>::reference' was intended)
main.cpp:37:9: error: 'reference' does not name a type
   const reference operator-> ( ) const {
         ^
main.cpp:37:9: note: (perhaps 'typename std::iterator<std::forward_iterator_tag, T, TDiff, TPointer, TReference>::reference' was intended)
main.cpp:42:3: error: 'reference' does not name a type
   reference operator-> ( ) {
   ^
main.cpp:42:3: note: (perhaps 'typename std::iterator<std::forward_iterator_tag, T, TDiff, TPointer, TReference>::reference' was intended)
